# okmr_auv

./: .gitattributes  .gitignore  .gitmodules  README.md
ros2_ws/src/automated_planning/: CMakeLists.txt
ros2_ws/src/automated_planning/src/: Move1m.cpp  Move1m.h  MovementBaseClass.cpp  MovementBaseClass.h  TurnCW.cpp  TurnCW.h  main.cpp
ros2_ws/src/okmr_automated_planner/: CMakeLists.txt  package.xml
ros2_ws/src/okmr_automated_planner/configs/: master.yaml
ros2_ws/src/okmr_automated_planner/configs/task_configs/: aligningMarker.yaml  findingGate.yaml  navigateChannel.yaml  orientingMarker.yaml
ros2_ws/src/okmr_automated_planner/launch/: automated_planner.launch.py  test_automated_planner.launch.py  test_finding_gate.launch.py  test_state_machine.launch.py
ros2_ws/src/okmr_automated_planner/okmr_automated_planner/: CLAUDE.md  README.md  automated_planner.py  base_state_machine.py  machine_config_file_parser.py  master_state_machine.py  movement_command_action_client.py  state_machine_factory.py  state_node.py
ros2_ws/src/okmr_automated_planner/okmr_automated_planner/state_machines/: __init__.py  doing_gate_task_state_machine.py  finding_dropper_state_machine.py  finding_gate_state_machine.py  finding_marker_state_machine.py  gate_state_machine.py  qualification_state_machine.py  root_state_machine.py  rotating_scan_state_machine.py  semifinal_state_machine.py  sideways_scan_state_machine.py  test_scan_state_machine.py  test_state_machine.py
ros2_ws/src/okmr_automated_planner/okmr_automated_planner/task_state_machines/: finding_gate_state_machine.py  finding_marker_state_machine.py
ros2_ws/src/okmr_automated_planner/state_machine_configs/competition/: params.yaml  root.yaml  small.yaml
ros2_ws/src/okmr_automated_planner/state_machine_configs/dev/: params.yaml  root.yaml  root_state_machine.yaml
ros2_ws/src/okmr_automated_planner/state_machine_configs/pool-test-2025-06-17/: README.txt  master.yaml
ros2_ws/src/okmr_automated_planner/state_machine_configs/testing/: params.yaml  root.yaml  test.yaml
ros2_ws/src/okmr_automated_planner/test/: test_freeze_integration.py  test_movement_action_integration.py  test_relative_move_integration.py
ros2_ws/src/okmr_controls/: CMakeLists.txt  README.md  package.xml  setup.cfg  setup.py
ros2_ws/src/okmr_controls/gui_config/: accel_control_layer.yaml  pose_control_layer.yaml  velocity_control_layer.yaml
ros2_ws/src/okmr_controls/include/okmr_controls/: accel_control_layer.hpp  control_layer_base.hpp  pid_controller.hpp  pose_control_layer.hpp  thrust_allocator.hpp  velocity_control_layer.hpp
ros2_ws/src/okmr_controls/launch/: cascade_pid_system.launch.py  full_cascading_pid.launch.py  full_control_stack.launch.py  pid_sim_test.launch.py  position_to_velocity.launch.py  velocity_to_motor_throttle.launch.launch.py  velocity_to_motor_throttle.launch.py
ros2_ws/src/okmr_controls/okmr_controls/: PIDController.py  accel_test.py  enable_and_control.py  goal_velocity_test.py  motor_thrust_test.py  pose_test.py  velocity_test.py  wrench_test.py
ros2_ws/src/okmr_controls/params/: accel_control.yaml  accel_control_sim.yaml  accel_sim.yaml  pid.yaml  pose_control.yaml  pose_control_sim.yaml  pose_sim.yaml  thrust_allocator.yaml  vel_sim.yaml  velocity_control.yaml  velocity_control_sim.yaml
ros2_ws/src/okmr_controls/params/7-motor/: thrust_allocator.yaml
ros2_ws/src/okmr_controls/params/data_collection/: accel_control.yaml  (+2 more)
ros2_ws/src/okmr_controls/src/: accel_control_layer.cpp  control_layer_base.cpp  pid_controller.cpp  planning.txt  pose_control_layer.cpp  thrust_allocator.cpp  velocity_control_layer.cpp
ros2_ws/src/okmr_hardware_interface/: CMakeLists.txt  package.xml  setup.cfg  setup.py
ros2_ws/src/okmr_hardware_interface/include/: lazycsv.hpp  thrust_to_pwm.h
ros2_ws/src/okmr_hardware_interface/launch/: ogopogo_hardware_interface.launch.py
ros2_ws/src/okmr_hardware_interface/okmr_hardware_interface/: clutch_mega_driver.py  dvl_driver.py  dvl_dummy.py  esp32_bridge.py  motor_publisher.py  motor_subscriber.py  serial_output_basic.py  temp_sensor.py
ros2_ws/src/okmr_hardware_interface/params/: esp32_bridge.yaml  mega_params.yaml
ros2_ws/src/okmr_hardware_interface/src/: firmware.ino  thrust_to_pwm.cpp  thrust_to_pwm_old.cpp  voltage_check.cpp
ros2_ws/src/okmr_hardware_interface/tables/: 10V.csv  12V.csv  14V.csv  16V.csv  18V.csv  20V.csv  t200.csv
ros2_ws/src/okmr_mapping/: CMakeLists.txt  package.xml
ros2_ws/src/okmr_mapping/launch/: full_mapping_system.launch.py
ros2_ws/src/okmr_mapping/src/: cloud_visualizer.cpp  depth_to_pointcloud.cpp  dummy_mask_generation.cpp  mapping_node.cpp  object_locator.cpp  planning.txt  projection_reference.cpp  sim_test.cpp  visualizer.cpp
ros2_ws/src/okmr_navigation/: CMakeLists.txt  README.md  dead_reckoning_integration_tests.md  package.xml
ros2_ws/src/okmr_navigation/launch/: dead_reckoning.launch.py  dead_reckoning_sim_test.launch.py  full_navigation_stack.launch.py  motion_planned_navigation.launch.py  motion_planned_navigation.py  static_transforms.launch.py  straight_line_navigation.launch.py  straight_line_navigation.py
ros2_ws/src/okmr_navigation/okmr_navigation/: entry_point.py  navigator_action_server.py
ros2_ws/src/okmr_navigation/params/: dead_reckoning.yaml  dead_reckoning_sim.yaml
ros2_ws/src/okmr_navigation/src/: dead_reckoning.cpp  dead_reckoning_plan.txt  motor_cortex.cpp  navigator.cpp  old_motor_cortex.cpp  relative_pose_target_server.cpp  velocity_target_server.cpp
ros2_ws/src/okmr_navigation/test/: test_move_relative_handler.py  test_navigation_integration.py
ros2_ws/src/okmr_stonefish/: CMakeLists.txt  README.md  package.xml
ros2_ws/src/okmr_stonefish/launch/: sim.launch.py  sim_headless.launch.py  static_transforms.launch.py
ros2_ws/src/okmr_stonefish/okmr_stonefish/: sim_adaptor.py  thruster_test.py
ros2_ws/src/okmr_utils/: CMakeLists.txt  package.xml
ros2_ws/src/okmr_utils/okmr_utils/: __init__.py  conversions.py  launch_shortcuts.py  logging.py
ros2_ws/src/okmr_utils/scripts/: setup_logging_format.bash
(+257 files in other folders)
